# portfolio-dev

./: .gitignore  README.md
.github/workflows/: ci.yml
ai-integration-demo/: .env.example  README.md  main.py  requirements.txt
ai-integration-demo/examples/: batch_classify.py  classify_tickets.py  extract_entities.py  summarize.py
ai-integration-demo/models/: schemas.py
ai-integration-demo/services/: base.py  batch_processor.py  classifier.py  entity_extractor.py  summarizer.py
ai-integration-demo/utils/: config.py  cost_tracker.py
data-processing-demo/: README.md  generate_sample_data.py  main.py  sample_data.csv
data-processing-demo/loaders/: csv_loader.py  json_loader.py  sqlite_loader.py
data-processing-demo/pipeline/: runner.py
data-processing-demo/transformers/: aggregator.py  cleaner.py
fastapi-demo/: .dockerignore  .env.example  README.md  main.py  pyproject.toml  requirements.txt
fastapi-demo/alembic/: env.py
fastapi-demo/alembic/versions/: 001_initial_tables.py
fastapi-demo/app/: main.py
fastapi-demo/app/api/v1/: router.py
fastapi-demo/app/api/v1/endpoints/: health.py  tasks.py  users.py
fastapi-demo/app/core/: config.py  exceptions.py  security.py
fastapi-demo/app/db/: session.py
fastapi-demo/app/models/: task.py  user.py
fastapi-demo/app/schemas/: common.py  task.py  user.py
fastapi-demo/app/services/: task_service.py  user_service.py
fastapi-demo/tests/: conftest.py  test_api.py
scraper-demo/: README.md  main.py  requirements.txt
telegram-bot-demo/: .env.example  README.md  config.py  main.py  requirements.txt
(+26 files in other folders)
